Can now render svg images in pane, and have also figured out how to find PsiElement based on a click. I found out how to add the Scala FindUsagesProvider but I think that's not what I actually need, regardless I will leave the code there commented out for now.

--- a/src/main/resources/webview/index.html
+++ b/src/main/resources/webview/index.html
@@ -2,7 +2,8 @@
 <html>
 <body>
 <div>
-    <img src="cat.png"/>
+    <!-- <img src="cat.png"/> -->
+    <img src="example.svg"/>
 </div>
 </body>
 </html>
